ionos/dome-wallet/wallet-crypto/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: wallet-crypto
  name: wallet-crypto
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: wallet-crypto
      app.kubernetes.io/name: wallet-crypto
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: wallet-crypto
        app.kubernetes.io/name: wallet-crypto
    spec:
      containers:
      - name: wallet-crypto
        image: in2kizuna/wallet-crypto:v2.0.0
        imagePullPolicy: Always
