ionos/dome-wallet/wallet-crypto/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallet-crypto
spec:
  ports:
  - name: wallet-crypto
    port: 8080
  selector:
    app.kubernetes.io/name: wallet-crypto
